@@ -4,12 +4,13 @@ import edu.mcw.rgd.dao.spring.IntStringMapQuery;
 import edu.mcw.rgd.datamodel.MapData;
 import edu.mcw.rgd.datamodel.RgdId;
 import edu.mcw.rgd.datamodel.SpeciesType;
-import edu.mcw.rgd.pipelines.*;
+import edu.mcw.rgd.process.CounterPool;
 import edu.mcw.rgd.process.Utils;
 import edu.mcw.rgd.reporting.Link;
 import org.apache.log4j.Logger;
 
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * @author mtutaj
@@ -20,14 +21,21 @@ import java.util.*;
  */
 public class GViewerStatsLoader {
     private OntologyDAO dao;
-    private Map<String,String> ontPrefixes;
-
     private final Logger logger = Logger.getLogger("gviewer_stats");
     private String version;
+    private Set<String> processedOntologyPrefixes;
 
     // maximum number of annotations that will be used;
     // the rest will be ignored
     private int maxAnnotCountPerTerm;
+
+    private int[] primaryMapKey = new int[4];
+
+    public void init() throws Exception {
+        primaryMapKey[SpeciesType.HUMAN] = dao.getPrimaryRefAssemblyMapKey(SpeciesType.HUMAN);
+        primaryMapKey[SpeciesType.MOUSE] = dao.getPrimaryRefAssemblyMapKey(SpeciesType.MOUSE);
+        primaryMapKey[SpeciesType.RAT] = dao.getPrimaryRefAssemblyMapKey(SpeciesType.RAT);
+    }
 
     public OntologyDAO getDao() {
         return dao;
@@ -46,23 +54,12 @@ public class GViewerStatsLoader {
 
         long time0 = System.currentTimeMillis();
 
-        this.ontPrefixes = ontPrefixes;
+        init();
 
-        PipelineManager manager = new PipelineManager();
-        // first thread group: read all ontology terms
+        List<String> incomingTermAccs = loadIncomingTermAccs(ontPrefixes);
 
-        PreProcessor pp = new PreProcessor();
-        manager.addPipelineWorkgroup(pp, "PP", 1, 0);
-        // second thread group: compute term statistics in multiple threads
-        manager.addPipelineWorkgroup(new QCProcessor(), "QC", qcThreadCount, 0);
-        // last thread group: save term statistics into database in 1 thread
-        manager.addPipelineWorkgroup(new DLProcessor(), "DL", 1, 0);
-
-        // run everything
-        manager.run();
-
-        // dump counter statistics
-        manager.dumpCounters();
+        Collection<TermStats> termStats = qc(incomingTermAccs);
+        load(termStats);
 
         System.out.println("-- computing gviewer stats -- DONE -- elapsed "+ Utils.formatElapsedTime(time0, System.currentTimeMillis()));
 
@@ -85,204 +82,199 @@ public class GViewerStatsLoader {
         return maxAnnotCountPerTerm;
     }
 
-    // compute nr of annotations for every term
-    class PreProcessor extends RecordPreprocessor {
+    List<String> loadIncomingTermAccs(Map<String,String> ontPrefixes) throws Exception {
 
-        int recno = 0;
+        List<String> results = new ArrayList<>();
 
-        private synchronized int getNextRecNo() {
-            return ++recno;
+        // for every ontology, load list of term acc ids
+        for( String ontPrefix: ontPrefixes.values() ) {
+
+            if( getProcessedOntologyPrefixes().contains(ontPrefix) ) {
+                List<String> accIds = dao.getAllTermAccIds(ontPrefix);
+                results.addAll(accIds);
+                System.out.println("GVIEWER STATS: TERM COUNT for " + ontPrefix + " is " + accIds.size());
+            } else {
+                System.out.println("GVIEWER STATS: TERM COUNT for " + ontPrefix + " is 0 -- not on processed list");
+            }
         }
 
-        @Override
-        public void process() throws Exception {
+        Collections.shuffle(results);
+        logger.info("GVIEWER STATS: loaded ontologies, term count="+results.size());
 
-            // for every ontology, load list of term acc ids
-            List<List<String>> accIdLists = new ArrayList<>();
-            for( String ontPrefix: ontPrefixes.values() ) {
-                accIdLists.add(dao.getAllTermAccIds(ontPrefix));
-                System.out.println("GVIEWER STATS: TERM COUNT for "+ontPrefix+" is "+accIdLists.get(accIdLists.size()-1).size());
+        return results;
+    }
+
+    public Collection<TermStats> qc(List<String> incomingTermAccs) {
+
+        ConcurrentHashMap<String, TermStats> results = new ConcurrentHashMap<>();
+
+        incomingTermAccs.parallelStream().forEach( accId -> {
+
+            try {
+                TermStats stats = dao.getTermWithStats(accId);
+                results.put(accId, stats);
+
+                long time0 = System.currentTimeMillis();
+                logger.debug(accId + " START  [#"+results.size()+"]");
+
+                getAnnots(stats, SpeciesType.HUMAN);
+                getAnnots(stats, SpeciesType.MOUSE);
+                getAnnots(stats, SpeciesType.RAT);
+
+                TermStats statsInRgd = dao.getGViewerStats(accId);
+                if (!stats.equalsForGViewer(statsInRgd)) {
+                }
+
+                long time1 = System.currentTimeMillis();
+                logger.debug(accId + " STOP " + (time1 - time0) + " ms");
+
+            } catch(Exception e) {
+                Utils.printStackTrace(e, logger);
+                throw new RuntimeException(e);
             }
+        });
 
-            // add term acc ids to processing queue in round robin fashion,
-            // picking term acc ids sequentially from the lists of term acc ids;
-            // that will ensure that top-level terms are most likely to be processed first
-            // so total processing time will be minimized
-            int cnt = 0;
-            while( !accIdLists.isEmpty() ) {
-                Iterator<List<String>> it = accIdLists.iterator();
-                while( it.hasNext() ) {
-                    List<String> accIdList = it.next();
-                    if( accIdList.isEmpty() )
-                        it.remove();
-                    else {
-                        String termAccId = accIdList.remove(0);
-                        PRecord rec = new PRecord();
-                        rec.setRecNo(getNextRecNo());
-                        rec.stats.setTermAccId(termAccId);
+        return results.values();
+    }
 
-                        getSession().putRecordToFirstQueue(rec);
-                        cnt++;
-                    }
+    void getAnnots(TermStats stats, int speciesTypeKey) throws Exception {
+
+        List<IntStringMapQuery.MapPair> annots;
+        final boolean withVariants = false;
+        if( stats.term.getAnnotObjectCountForSpecies(speciesTypeKey, withVariants)>getMaxAnnotCountPerTerm() ) {
+            logger.debug("  gviewer stats skipped for "+stats.getTermAccId()+" species="+speciesTypeKey);
+            annots = Collections.emptyList();
+        } else{
+            annots = loadAnnots(stats, speciesTypeKey);
+        }
+
+        XmlInfo xml = new XmlInfo();
+
+        for( IntStringMapQuery.MapPair annot: annots ) {
+            boolean isChildTerm = !annot.stringValue.equals(stats.getTermAccId());
+            processXml(annot.keyValue, speciesTypeKey, xml, isChildTerm);
+        }
+
+        processXml(stats, speciesTypeKey, xml);
+    }
+
+    List<IntStringMapQuery.MapPair> loadAnnots(TermStats stats, int speciesTypeKey) throws Exception {
+        List<IntStringMapQuery.MapPair> annots = dao.getAnnotatedRgdIds(stats.getTermAccId(), speciesTypeKey);
+        return annots;
+    }
+
+    void processXml(int objRgdId, int speciesTypeKey, XmlInfo info, boolean isChildTerm) throws Exception {
+        String type, color, link;
+        switch(dao.getObjectKey(objRgdId)) {
+            case RgdId.OBJECT_KEY_GENES: type="gene";
+                color="0x79CC3D";
+                link= Link.gene(objRgdId);
+                break;
+            case RgdId.OBJECT_KEY_QTLS: type="qtl";
+                color="0xCCCCCC";
+                link= Link.qtl(objRgdId);
+                break;
+            case RgdId.OBJECT_KEY_STRAINS: type="strain";
+                color="0xBBBB0F";
+                link= Link.strain(objRgdId);
+                break;
+            default:
+                return;
+        }
+
+        List<MapData> mds = dao.getMapData(objRgdId, primaryMapKey[speciesTypeKey]);
+        for (MapData md : mds) {
+
+            String feature = "<feature>" + "<chromosome>" + md.getChromosome() + "</chromosome>" +
+                    "<start>" + md.getStartPos() + "</start>" +
+                    "<end>" + md.getStopPos() + "</end>" +
+                    "<type>" + type + "</type>" +
+                    "<label>" + encode(dao.getObjectSymbol(objRgdId)) + "</label>" +
+                    "<link>" + link + "</link>" +
+                    "<color>" + color + "</color>" +
+                    "</feature>\n";
+
+            if (info.featuresWithChilds < getMaxAnnotCountPerTerm()) {
+                if (info.features1.add(feature)) {
+                    // skip duplicate features
+                    if (info.xmlWithChilds == null)
+                        info.xmlWithChilds = new StringBuilder("<genome>");
+                    info.xmlWithChilds.append(feature);
+                    info.featuresWithChilds++;
                 }
             }
-            logger.debug("GVIEWER STATS: loaded ontologies, term count="+cnt);
+            if (!isChildTerm && info.featuresForTerm < getMaxAnnotCountPerTerm()) {
+                if (info.features2.add(feature)) {
+                    if (info.xmlForTerm == null)
+                        info.xmlForTerm = new StringBuilder("<genome>");
+                    info.xmlForTerm.append(feature);
+                    info.featuresForTerm++;
+                }
+            }
         }
     }
 
-    class QCProcessor extends RecordProcessor {
+    void processXml(TermStats stats, int speciesTypeKey, XmlInfo info) {
 
-        int[] primaryMapKey = new int[4];
-
-        public QCProcessor() throws Exception {
-            primaryMapKey[SpeciesType.HUMAN] = dao.getPrimaryRefAssemblyMapKey(SpeciesType.HUMAN);
-            primaryMapKey[SpeciesType.MOUSE] = dao.getPrimaryRefAssemblyMapKey(SpeciesType.MOUSE);
-            primaryMapKey[SpeciesType.RAT] = dao.getPrimaryRefAssemblyMapKey(SpeciesType.RAT);
+        if( info.xmlForTerm!=null ) {
+            info.xmlForTerm.append("</genome>\n");
+            stats.setXmlForTerm(info.xmlForTerm.toString(), speciesTypeKey);
         }
 
-        public void process(PipelineRecord r) throws Exception {
-
-            PRecord rec = (PRecord) r;
-            String accId = rec.stats.getTermAccId();
-            rec.stats = dao.getTermWithStats(accId);
-
-            long time0 = System.currentTimeMillis();
-            logger.debug(rec.getRecNo() + ". " + Thread.currentThread().getName() + " " + accId + " START");
-
-            getAnnots(rec.stats, SpeciesType.HUMAN);
-            getAnnots(rec.stats, SpeciesType.MOUSE);
-            getAnnots(rec.stats, SpeciesType.RAT);
-
-            TermStats statsInRgd = dao.getGViewerStats(accId);
-            if (!rec.stats.equalsForGViewer(statsInRgd)) {
-                rec.setFlag("LOAD");
-            }
-
-            long time1 = System.currentTimeMillis();
-            logger.debug(rec.getRecNo() + ". " + Thread.currentThread().getName() + "  " + accId + " STOP " + (time1 - time0) + " ms");
-        }
-
-        void getAnnots(TermStats stats, int speciesTypeKey) throws Exception {
-
-            List<IntStringMapQuery.MapPair> annots;
-            final boolean withVariants = false;
-            if( stats.term.getAnnotObjectCountForSpecies(speciesTypeKey, withVariants)>getMaxAnnotCountPerTerm() ) {
-                logger.debug("  gviewer stats skipped for "+stats.getTermAccId()+" species="+speciesTypeKey);
-                annots = Collections.emptyList();
-            } else{
-                annots = loadAnnots(stats, speciesTypeKey);
-            }
-
-            XmlInfo xml = new XmlInfo();
-
-            for( IntStringMapQuery.MapPair annot: annots ) {
-                boolean isChildTerm = !annot.stringValue.equals(stats.getTermAccId());
-                processXml(annot.keyValue, speciesTypeKey, xml, isChildTerm);
-            }
-
-            processXml(stats, speciesTypeKey, xml);
-        }
-
-        List<IntStringMapQuery.MapPair> loadAnnots(TermStats stats, int speciesTypeKey) throws Exception {
-            List<IntStringMapQuery.MapPair> annots = dao.getAnnotatedRgdIds(stats.getTermAccId(), speciesTypeKey);
-            return annots;
-        }
-
-        void processXml(int objRgdId, int speciesTypeKey, XmlInfo info, boolean isChildTerm) throws Exception {
-            String type, color, link;
-            switch(dao.getObjectKey(objRgdId)) {
-                case RgdId.OBJECT_KEY_GENES: type="gene";
-                    color="0x79CC3D";
-                    link= Link.gene(objRgdId);
-                    break;
-                case RgdId.OBJECT_KEY_QTLS: type="qtl";
-                    color="0xCCCCCC";
-                    link= Link.qtl(objRgdId);
-                    break;
-                case RgdId.OBJECT_KEY_STRAINS: type="strain";
-                    color="0xBBBB0F";
-                    link= Link.strain(objRgdId);
-                    break;
-                default:
-                    return;
-            }
-
-            List<MapData> mds = dao.getMapData(objRgdId, primaryMapKey[speciesTypeKey]);
-            for (MapData md : mds) {
-
-                String feature = "<feature>" + "<chromosome>" + md.getChromosome() + "</chromosome>" +
-                        "<start>" + md.getStartPos() + "</start>" +
-                        "<end>" + md.getStopPos() + "</end>" +
-                        "<type>" + type + "</type>" +
-                        "<label>" + encode(dao.getObjectSymbol(objRgdId)) + "</label>" +
-                        "<link>" + link + "</link>" +
-                        "<color>" + color + "</color>" +
-                        "</feature>\n";
-
-                if (info.featuresWithChilds < getMaxAnnotCountPerTerm()) {
-                    if (info.features1.add(feature)) {
-                        // skip duplicate features
-                        if (info.xmlWithChilds == null)
-                            info.xmlWithChilds = new StringBuilder("<genome>");
-                        info.xmlWithChilds.append(feature);
-                        info.featuresWithChilds++;
-                    }
-                }
-                if (!isChildTerm && info.featuresForTerm < getMaxAnnotCountPerTerm()) {
-                    if (info.features2.add(feature)) {
-                        if (info.xmlForTerm == null)
-                            info.xmlForTerm = new StringBuilder("<genome>");
-                        info.xmlForTerm.append(feature);
-                        info.featuresForTerm++;
-                    }
-                }
-            }
-        }
-
-        void processXml(TermStats stats, int speciesTypeKey, XmlInfo info) {
-
-            if( info.xmlForTerm!=null ) {
-                info.xmlForTerm.append("</genome>\n");
-                stats.setXmlForTerm(info.xmlForTerm.toString(), speciesTypeKey);
-            }
-
-            if( info.xmlWithChilds!=null ) {
-                info.xmlWithChilds.append("</genome>\n");
-                stats.setXmlWithChilds(info.xmlWithChilds.toString(), speciesTypeKey);
-            }
-        }
-
-        String encode(String txt) {
-            // utility to encode '<' and '>' in strain symbols
-            if( txt.indexOf('<')>=0 ) {
-                return txt.replace("<", "&lt;").replace(">", "&gt;");
-            }
-            return txt;
+        if( info.xmlWithChilds!=null ) {
+            info.xmlWithChilds.append("</genome>\n");
+            stats.setXmlWithChilds(info.xmlWithChilds.toString(), speciesTypeKey);
         }
     }
 
-    class DLProcessor extends RecordProcessor {
-        public void process(PipelineRecord r) throws Exception {
-            PRecord rec = (PRecord) r;
+    String encode(String txt) {
+        // utility to encode '<' and '>' in strain symbols
+        if( txt.indexOf('<')>=0 ) {
+            return txt.replace("<", "&lt;").replace(">", "&gt;");
+        }
+        return txt;
+    }
 
-            int result = dao.updateGViewerStats(rec.stats);
+    public void load(Collection<TermStats> incomingTerms) throws Exception {
+
+        CounterPool counters = new CounterPool();
+        for (TermStats stats : incomingTerms) {
+            int result = dao.updateGViewerStats(stats);
             String status;
-            if( result==0 ) {
+            if (result == 0) {
                 status = " MATCHED";
-            } else if( result>0 ) {
+            } else if (result > 0) {
                 status = " UPDATED";
             } else {
                 status = " INSERTED";
             }
 
-            logger.debug(Thread.currentThread().getName()+"  "+rec.stats.getTermAccId()+status);
-            getSession().incrementCounter("GVIEWER STATS"+status, 1);
+            logger.debug(Thread.currentThread().getName() + "  " + stats.getTermAccId() + status);
+
+            counters.increment(status);
+        }
+
+        // dump stats
+        int count = counters.get(" MATCHED");
+        if( count > 0 ) {
+            logger.info("GVIEWER STATS MATCHED: " + Utils.formatThousands(count));
+        }
+        count = counters.get(" INSERTED");
+        if( count > 0 ) {
+            logger.info("GVIEWER STATS INSERTED: " + Utils.formatThousands(count));
+        }
+        count = counters.get(" UPDATED");
+        if( count > 0 ) {
+            logger.info("GVIEWER STATS UPDATED: " + Utils.formatThousands(count));
         }
     }
 
-    // shared structure to be passed between processing queues
-    class PRecord extends PipelineRecord {
-        public TermStats stats = new TermStats();
+    public void setProcessedOntologyPrefixes(Set<String> processedOntologyPrefixes) {
+        this.processedOntologyPrefixes = processedOntologyPrefixes;
+    }
+
+    public Set getProcessedOntologyPrefixes() {
+        return processedOntologyPrefixes;
     }
 
     // structure used to compute xml data for gviewer
