@@ -1,3 +1,6 @@
+Jul 06, 2020
+  gviewer stats: simplified code; only processing ontologies without cycles
+
 Jul 03, 2020
   obo file creator: updated code to export term def xrefs
 
